chore(ci): group all build-info deps upgrades

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -91,6 +91,19 @@
         'async-graphql-',
       ],
     },
+    {
+      groupName: 'build-info crates',
+      groupSlug: 'build-info',
+      matchManagers: [
+        'cargo',
+      ],
+      matchPackageNames: [
+        'build-info',
+      ],
+      matchPackagePrefixes: [
+        'build-info-',
+      ],
+    },
   ],
   customManagers: [
     {
