--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,22 +1,27 @@
-name: tests
-
+name: ci
 on:
-  push:
-    branches: [ main ]
   pull_request:
+  merge_group:
+  push:
+    branches:
+      - "main"
+      - "renovate/lock-file-maintenance"
   workflow_dispatch:
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
 
 jobs:
   fmt:
-    name: cargo fmt
     runs-on: ubuntu-latest
-    container: 
-      image: rust:1.76-bookworm
     steps:
-      - uses: actions/checkout@v3
-      - run: |
-          rustup component add rustfmt
-          cargo fmt --all -- --check
+        - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
+        - uses: dtolnay/rust-toolchain@nightly
+          with:
+            components: rustfmt
+
+        - run: cargo +nightly fmt --all -- --check
 
   sqlx:
     name: prepared query metadata is up-to-date
@@ -34,7 +39,7 @@ jobs:
         ports:
           - 5432:5432
     container: 
-      image: rust:1.76-bookworm
+      image: rust:1.79-bookworm
     env:
       DATABASE_URL: postgres://postgres@postgres:5432
     steps:
@@ -59,7 +64,7 @@ jobs:
     name: cargo clippy
     runs-on: ubuntu-latest
     container: 
-      image: rust:1.76-bookworm
+      image: rust:1.79-bookworm
     env:
       DATABASE_URL: postgres://postgres@postgres:5432 
       SQLX_OFFLINE: true
@@ -147,7 +152,7 @@ jobs:
         ports:
           - 5432:5432
     container:
-      image: rust:1.76-bookworm
+      image: rust:1.79-bookworm
     env:
       DATABASE_URL: postgres://postgres@postgres:5432 
     steps:
