--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,1 +1,5 @@
 edition = "2021"
+unstable_features = true
+imports_granularity = "Crate"
+group_imports = "StdExternalCrate"
+reorder_modules = true
