--- a/.github/workflows/containers.yml
+++ b/.github/workflows/containers.yml
@@ -1,25 +1,24 @@
-name: Build and upload Docker image
-
+name: containers
 on:
   push:
-    tags:
-      - "*.*.*"
     branches:
-      - main
-  pull_request:
-    branches:
-      - main
+      - "main"
+  workflow_dispatch:
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
 
 env:
   REGISTRY: ghcr.io/${{ github.repository_owner }}
 
 jobs:
-  builds-linux:
+  build:
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        target: [indexer-service-rs, indexer-tap-agent]
+        target: [indexer-service-rs]
 
     permissions:
       packages: write
