--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -32,7 +32,7 @@ thegraph-graphql-http = { version = "0.2.1", features = [
     "http-client-reqwest",
 ] }
 tap_core = "0.8.0"
-axum = { version = "0.7.5", default_features = true }
+axum = { version = "0.7.5", default-features = true }
 axum-extra = { version = "0.9.3", features = ["typed-header"] }
 thiserror = "1.0.49"
 async-trait = "0.1.74"
