--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,7 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    needs: [ "fmt", "clippy", "sqlx" ]
+    needs: [ "fmt", "clippy" ]
     permissions:
       contents: write
       pull-requests: write
@@ -122,43 +122,3 @@ jobs:
         uses: coverallsapp/github-action@v2.2.0
         with:
           file: ./lcov.info
-
-  # Cannot do with llvm-cov, see https://github.com/taiki-e/cargo-llvm-cov/issues/2
-  test-docs:
-    runs-on: ubuntu-latest
-    needs: [ "fmt", "clippy", "sqlx" ]
-    permissions:
-      contents: write
-      pull-requests: write
-      actions: read
-    services:
-      postgres:
-        image: postgres:15
-        env:
-          POSTGRES_HOST_AUTH_METHOD: trust
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 5432:5432
-    env:
-      DATABASE_URL: postgres://postgres@localhost:5432
-    steps:
-      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
-      - uses: dtolnay/rust-toolchain@stable
-      - name: Cache cargo build files
-        uses: Leafwing-Studios/cargo-cache@c7e8aa40ae2c975774d3bd766beb92927cfd7771 # v1
-
-      - name: Install sqlx-cli
-        uses: baptiste0928/cargo-install@9f6037ed331dcf7da101461a20656273fa72abf0 # v3
-        with:
-          crate: sqlx-cli
-          args: --no-default-features
-          features: postgres
-      - name: Run migrations
-        run: cargo sqlx migrate run
-
-      - name: cargo test docs
-        run: cargo test --all-features --workspace --doc
