--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-alloy-primitives = { version = "0.6", features = ["serde"] }
-alloy-sol-types = "0.6"
+alloy-primitives = { version = "0.7", features = ["serde"] }
+alloy-sol-types = "0.7"
 anyhow = "1.0.75"
 arc-swap = "1.6.0"
 ethers = "2.0.10"
@@ -27,9 +27,8 @@ sqlx = { version = "0.7.1", features = [
     "time",
 ] }
 tokio = { version = "1.32.0", features = ["full", "macros", "rt"] }
-thegraph = { git = "https://github.com/edgeandnode/toolshed", tag = "thegraph-v0.5.0" }
 thegraph-graphql-http = { version = "0.2.1", features = ["http-client-reqwest"] }
-tap_core = "1.0.0"
+tap_core = { git = "https://github.com/semiotic-ai/timeline-aggregation-protocol", rev = "483a712", version = "1.0.0" }
 axum = { version = "0.7.5", default-features = true }
 axum-extra = { version = "0.9.3", features = ["typed-header"] }
 thiserror = "1.0.49"
