--- a/config/Cargo.toml
+++ b/config/Cargo.toml
@@ -4,16 +4,16 @@ version = "1.0.0-rc.2"
 edition = "2021"
 
 [dependencies]
-alloy-primitives = "0.6"
+alloy-primitives = "0.7"
 bigdecimal = { version = "0.4.3", features = ["serde"] }
 bip39 = "2.0.0"
 figment = { version = "0.10.19", features = ["env", "toml"] }
 serde = "1.0.188"
-serde_with = "3.8.1"
 serde_repr = "0.1.19"
-thegraph = { git = "https://github.com/edgeandnode/toolshed", tag = "thegraph-v0.5.0" }
-url = { version = "2.5.0", features = ["serde"] }
+serde_with = "3.8.1"
+thegraph-core = "0.5.3"
 tracing = "0.1.34"
+url = { version = "2.5.0", features = ["serde"] }
 
 [dev-dependencies]
 serde_test = "1.0.176"
