--- a/service/Cargo.toml
+++ b/service/Cargo.toml
@@ -35,12 +35,12 @@ sqlx = { version = "0.7.1", features = [
     "time",
 ] }
 lazy_static = "1.4.0"
-thegraph = { git = "https://github.com/edgeandnode/toolshed", tag = "thegraph-v0.5.0" }
 graphql = { git = "https://github.com/edgeandnode/toolshed", tag = "graphql-v0.3.0" }
 thegraph-graphql-http = { version = "0.2.0", features = [
     "http-client-reqwest",
 ] }
 build-info = "0.0.34"
+thegraph-core = "0.5.3"
 
 [dev-dependencies]
 hex-literal = "0.4.1"
