--- a/.github/workflows/containers.yml
+++ b/.github/workflows/containers.yml
@@ -46,7 +46,7 @@ jobs:
             type=sha
 
       - name: Log in to the Container registry
-        uses: docker/login-action@0d4c9c5ea7693da7b068278f7b52bda2a190a446 # v3
+        uses: docker/login-action@465a07811f14bebb1938fbed4728c6a1ff8901fc
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
@@ -56,6 +56,8 @@ jobs:
         uses: docker/build-push-action@15560696de535e4014efeff63c48f16952e52dd1 # v6
         with:
           context: ./
-          push: true
+          pull: true
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
           file: Dockerfile.${{ matrix.target }}
