--- a/.github/workflows/licenses.yml
+++ b/.github/workflows/licenses.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install google/addlincense
         uses: jaxxstorm/action-install-gh-release@25d5e2dd555cd74f1fab9ac1e6ea117acde2c0c4 #v1.12.0
         with:
-          repo: google/addlincense
+          repo: google/addlicense
           tag: v1.1.1
           cache: enable
 
