chore: rename service crate to indexer-broker
Signed-off-by: Lorenzo Delgado <lorenzo@edgeandnode.com>

--- a/Dockerfile.indexer-broker
+++ b/Dockerfile.indexer-broker
@@ -6,15 +6,15 @@ COPY . .
 # Force SQLx to use the offline mode to statically check the database queries against
 # the prepared files in the `.sqlx` directory.
 ENV SQLX_OFFLINE=true
-RUN cargo build --release --bin service
+RUN cargo build --release --bin indexer-broker
 
 ########################################################################################
 
 FROM debian:bookworm-slim
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    openssl ca-certificates \
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends openssl ca-certificates \
     && rm -rf /var/lib/apt/lists/*
-COPY --from=build /root/target/release/service /usr/local/bin/service
+COPY --from=build /root/target/release/indexer-broker /usr/local/bin/indexer-broker
 
-ENTRYPOINT [ "/usr/local/bin/service" ]
+ENTRYPOINT [ "/usr/local/bin/indexer-broker" ]
