--- a/indexer-broker/Cargo.toml
+++ b/indexer-broker/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-name = "service"
+name = "indexer-broker"
 version = "1.0.0-rc.2"
 edition = "2021"
 license = "Apache-2.0"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 indexer-common = { path = "../common" }
