--- a/.github/workflows/containers.yml
+++ b/.github/workflows/containers.yml
@@ -1,9 +1,8 @@
 name: containers
 on:
-  push:
-    branches:
-      - "main"
   workflow_dispatch:
+  push:
+    branches: [ "main" ]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -18,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        target: [indexer-service-rs]
+        target: [ "indexer-broker" ]
 
     permissions:
       packages: write
