--- a/config/Cargo.toml
+++ b/config/Cargo.toml
@@ -8,6 +8,7 @@ alloy-primitives = "0.7"
 bigdecimal = { version = "0.4.3", features = ["serde"] }
 bip39 = "2.0.0"
 figment = { version = "0.10.19", features = ["env", "toml"] }
+indexer-common = { path = "../common" }
 serde = "1.0.188"
 serde_repr = "0.1.19"
 serde_with = "3.8.1"
@@ -16,5 +17,4 @@ tracing = "0.1.34"
 url = { version = "2.5.0", features = ["serde"] }
 
 [dev-dependencies]
-serde_test = "1.0.176"
 toml = "0.8.12"
